Fix memory leak in Qt Quick Controls icon

The implementation of the icon property uses the internal
QThemeIconInfo struct from qtbase. That is low level and expects the
user to handle memory deallocation, and this was missing.

Fixes: QTBUG-93050
Change-Id: Ied6488aa8871c246d3781a3db47f40130dc19bcc
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit 47ded88e0c2f489e112b72f62151123db5c04dbe)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>